--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "devstart": "nodemon server.js"
+    "devstart": "nodemon -r esm server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
+    "esm": "^3.2.25",
     "express": "^4.17.3",
     "sqlite3": "^5.0.2"
   }
