--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "database.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r esm server.js",
+    "start": "nodemon -r esm server.js"
   },
   "repository": {
     "type": "git",
