--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "redis": "^4.0.6",
