--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^7.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "redis": "^4.0.6",
     "socket.io": "^4.4.1"
   },
